# substrate-alignment

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml
.github/: dependabot.yml  (+1 more)
python/: README.md  pyproject.toml
python/examples/: 01_npg_gate.py  02_resistance_band.py  03_alignment_refresher.py  04_metadata_store.py  05_halt_and_escalate.py  06_full_governor_loop.py  README.md
python/examples/starter_kit/: README.md  governed_agent.py
python/src/substrate/: __init__.py  __main__.py  alignment_computer.py  alignment_refresher.py  cross_org_classifier.py  debt_pickup.py  governed_ascent.py  harness.py  net_potential_gain_gate.py  objective_gate.py  resistance_band.py  sustained_load.py  threshold_derivation.py  types.py
python/src/substrate/artifact/: __init__.py  cross_cell_verifier.py  substrate_audit_artifact.py
python/src/substrate/audit/: __init__.py  peer_witness.py  peer_witness_signer.py  substrate_trace.py  witness_replication.py
python/src/substrate/cadence/: __init__.py  cadence_tracker.py
python/src/substrate/capability/: __init__.py  capability_grant_gate.py
python/tests/: test_alignment_computer.py  test_alignment_refresher.py  test_care_care_gradient.py  test_care_care_profile.py  test_care_care_weight.py  test_care_care_weighted_npg.py  test_care_kinship_floor.py  test_cross_org_classifier.py  test_debt_pickup.py  test_executive_band.py  test_executive_cause.py  test_executive_deliberation.py  test_executive_executive_function.py  test_executive_negentropy.py  test_executive_observed_graph.py  test_executive_peer_alarm.py  test_executive_roll_up.py  test_executive_state_query.py  test_governed_ascent.py  test_harness.py  test_main.py  test_net_potential_gain_gate.py  test_objective_gate.py  test_resistance_band.py  test_smoke.py  test_sustained_load.py  test_threshold_derivation.py  test_types.py
python/tests/artifact/: __init__.py  test_cross_cell_verifier.py  test_substrate_audit_artifact.py
python/tests/audit/: __init__.py  test_cross_repo_vector.py  test_peer_witness.py  test_peer_witness_signer.py  test_substrate_trace.py  test_witness_replication.py
python/tests/cadence/: test_cadence_tracker.py
python/tests/capability/: __init__.py  test_capability_grant_gate.py
python/tests/cognition/: __init__.py  test_modeling_mode_probe_suite.py  test_reasoning_mode_classifier.py
python/tests/conformance/: __init__.py  test_assessment_service.py
python/tests/cross_entity/: __init__.py  test_interpreter.py  test_observer.py
python/tests/cultural_infrastructure/: test_gap_detector.py  test_inventory.py
python/tests/defensive/: __init__.py  test_modulation_engine.py
python/tests/discovery/: __init__.py  test_eight_criteria_verifier.py
python/tests/drift/: __init__.py  test_drift_pattern_matcher.py  test_golden_rule_probe.py  test_signal_aggregator.py
python/tests/encapsulating_context/: test_conscious_check_overlay.py  test_pull_signal.py  test_state_tracker.py
python/tests/etiquette/: __init__.py  test_transmitter.py
python/tests/evidence_grade/: test_composer.py
python/tests/exposure/: __init__.py  test_chain_verifier.py
python/tests/game_theory/: __init__.py  test_awareness_verifier.py  test_folk_theorem_verifier.py  test_game_theoretic_classifier.py  test_mechanism_designer.py
python/tests/governor/: __init__.py  test_substrate_governor.py
python/tests/growth/: __init__.py  test_growth_vector_tracker.py
python/tests/halt/: __init__.py  test_halt_escalate_protocol.py  test_halt_gate.py
python/tests/hierarchy/: __init__.py  test_authority_pressure_failure_probe.py  test_exit_protocol.py  test_hard_limit_dispatcher.py  test_outgrowing_detector.py  test_patience_classifier.py
python/tests/identity/: __init__.py  test_ego_emergence_verifier.py
python/tests/inversion/: __init__.py  test_inversion_detector.py
python/tests/metrics/: __init__.py  test_substrate_metrics.py
python/tests/multi_scale/: test_scope_registry.py
python/tests/multiscale/: __init__.py  test_aggregator.py  test_scope_registry.py
python/tests/murmuration/: __init__.py  test_coordinator.py
python/tests/offense/: test_handling_protocol.py  test_pre_action_net_state_evaluator.py  test_reflex_restraint_gate.py  test_response_orchestrator.py  test_self_model_calibration.py  test_signal_type.py
python/tests/pair_coupling/: __init__.py  test_agent_architecture.py  test_alignment_audit.py  test_asymmetry_by_design_verifier.py  test_asymmetry_preservation.py  test_cedar_predicate.py  test_extraction_monitor.py  test_reciprocal_feedback.py  test_state_machine.py  test_trajectory_capacity_tracker.py
python/tests/performance_budget/: test_budget_calculator.py  test_holder.py  test_pressure_signal.py
python/tests/progress_signaling/: test_emitter.py  test_interval_calibrator.py  test_signal.py
python/tests/progression/: test_model.py  test_tier_engine.py
python/tests/realization/: __init__.py  test_event_tracker.py
python/tests/reciprocity/: __init__.py  test_tit_for_tat.py
python/tests/revenue/: __init__.py  test_revenue_policy_gate.py
python/tests/signals/: __init__.py  test_mode_interpreter.py  test_state_signal_generator.py
python/tests/state_layer/: test_compartmentalization_verifier.py  test_consolidation_event.py  test_failure_mode_detector.py  test_recursive_transmission_detector.py
python/tests/status/: __init__.py  test_trajectory_tracker.py
python/tests/tells/: __init__.py  test_behavioral_tell_detector.py
python/tests/training/: test_reward_architecture.py
python/tests/trust/: __init__.py  test_felt_familiarity_shortcut_detector.py  test_guard_relaxation_curve.py  test_multi_signal_trust_extension.py  test_substrate_coherence_trust_scorer.py  test_substrate_state_evidence_trust_scorer.py
python/tests/voting/: test_anti_pattern_detector.py  test_awareness_precondition.py  test_convergence_tracker.py  test_independence_verifier.py  test_position_classifier.py
python/tests/workflow/: __init__.py  test_substrate_mode_shift_detector.py
(+245 files in other folders)
