[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "substrate-alignment"
version = "0.1.0.dev0"
description = "Reference Python implementation of the substrate-alignment open standard for multi-entity agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "System9", email = "open-source@system9.ai" },
]
maintainers = [
  { name = "System9", email = "open-source@system9.ai" },
]
keywords = [
  "ai-safety",
  "alignment",
  "multi-agent",
  "audit",
  "conformance",
  "substrate-alignment",
  "open-standard",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pyright>=1.1.350",
  "pylint>=3.2",
]

[project.urls]
Homepage      = "https://github.com/System9ai/substrate-alignment"
Repository    = "https://github.com/System9ai/substrate-alignment"
Documentation = "https://github.com/System9ai/substrate-alignment#documentation"
Issues        = "https://github.com/System9ai/substrate-alignment/issues"
Changelog     = "https://github.com/System9ai/substrate-alignment/blob/main/CHANGELOG.md"

# -- build configuration ------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/substrate"]

[tool.hatch.build.targets.sdist]
include = [
  "src/substrate/",
  "tests/",
  "examples/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

# -- pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.1"
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers --strict-config"
xfail_strict = true

# -- pyright ------------------------------------------------------------------

[tool.pyright]
include = ["src/substrate", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportImplicitOverride = "error"
reportUnnecessaryTypeIgnoreComment = "warning"

# Tests use third-party helpers (notably ``pytest.approx``) whose return types
# are intentionally loose; relax the "unknown type" diagnostics in tests while
# keeping the production surface fully strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"

# -- pylint -------------------------------------------------------------------

[tool.pylint.main]
py-version = "3.11"
jobs = 0
load-plugins = []
ignore-paths = ["^build/.*$", "^dist/.*$"]
recursive = true

[tool.pylint."messages control"]
# These conflict with module-level docstrings / type-annotated public APIs that
# Pyright already enforces. Keep the false-positive surface narrow rather than
# wide; reintroduce a check the moment it earns its keep.
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
# Many substrate primitives are dataclasses representing persisted records or
# protocol surfaces; the default limits are tuned for behavioural classes and
# are too tight for value-object shapes.
max-args = 10
max-attributes = 25
max-public-methods = 30
max-locals = 20
max-branches = 15
